Fixed bug on safari where flexbox was not working for classification dividers

--- a/src/less/workingfiles/submit.less
+++ b/src/less/workingfiles/submit.less
@@ -428,7 +428,10 @@ th {
 .classification-divider {
     .divider();
     width: 100%;
+    flex-grow: 1;
+    flex-basis: 1;
 }
+    
 .queued-divider {
     .divider();
     width: 30%;
